# pmb2_navigation-gbp

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf
launch/: laser_sick-571.launch.py  laser_sim.launch.py  slam.launch.py
pipeline/: 00_laser_sick-571.yaml  00_laser_w_composition_hokuyo.yaml  00_rgbd_cobra_structure.yaml
pmb2_2dnav/: CHANGELOG.rst  package.xml
pmb2_2dnav/launch/: localization.launch.py  navigation.launch.py  pmb2_nav_bringup.launch.py
pmb2_2dnav/params/: pmb2_nav.yaml  pmb2_remappings_sim.yaml
pmb2_laser_sensors/: CHANGELOG.rst  package.xml
pmb2_laser_sensors/launch/: laser_hokuyo.launch.py
pmb2_laser_sensors/pipeline/: 00_laser_hokuyo.yaml  00_laser_sick-561.yaml  00_laser_w_composition_sick-561.yaml  00_laser_w_composition_sick-571.yaml
pmb2_navigation/: CHANGELOG.rst  package.xml
pmb2_rgbd_sensors/: CHANGELOG.rst  CMakeLists.txt  package.xml
pmb2_rgbd_sensors/launch/: rgbd_cobra_realsense-d435i.launch.py  rgbd_cobra_structure.launch.py
pmb2_rgbd_sensors/module/: 10_rgbd.yaml
pmb2_rgbd_sensors/pipeline/: 00_rgbd_cobra_realsense-d435.yaml  00_rgbd_cobra_realsense-d435i.yaml
rpm/: ros-humble-pmb2-2dnav.spec  ros-humble-pmb2-laser-sensors.spec  ros-humble-pmb2-navigation.spec  ros-humble-pmb2-rgbd-sensors.spec  template.spec
variables/: 10_laser_variables.yaml
